# SecuServe-Messaging-Module

./: README copy.md  README.md  dev.sh  pyproject.toml
.github/workflows/: python-package-conda.yml
MessagingMod/: Conifg.ini  __init__.py  __main__.py  const.py  imports.py  messageHandler.py
MessagingMod/messager/: messageHandler.py
data/: Conifg.ini
