[tool.poetry]
name = "secuserve-messaging-module"
version = "0.1.0"
description = "A Secuserve Module for handling messaging routing from server to phoens"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
zmq = "^0.0.0"
black = "^21.9b0"
requests = "^2.26.0"
configparser = "^5.0.2"
pathlib = "^1.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
